# grpc-cmake-example

./: CMakeLists.txt  greeter_server.cc  helloworld.grpc.pb.h  teerpc.grpc.pb.cc  teerpc.grpc.pb.h  teerpc.pb.cc  teerpc.pb.h  teetask.pb.cc  teetask.pb.h
protos/: teerpc.proto  teetask.proto
